manifest/test/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gpmt-api
    namespace: "default"
spec:
    selector:
        matchLabels:
            app: gpmt-api
    template:
        metadata:
            labels:
                app: gpmt-api
        spec:
            containers:
            - name: gpmt-api
              image: hakrac/gpmt-api:latest
              imagePullPolicy: Always
              env:
              - name: AUTH_SIGN_SECRET 
                value: "abc"
              - name: HASH_SALT_ROUNDS
                value: "10"
              - name: PORT
                value: "80"
              - name: STORAGE_CONNECTION_URL
                value: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://gpmt-storage.default.svc.cluster.local:10000/devstoreaccount1;"
              - name: MONGO_URL
                value: "mongodb://gpmt-mongodb.default.svc.cluster.local:27017/gpmt"
              - name: RASA_URL
                value: "http://rasa-x-rasa-production.rasa.svc.cluster.local:5005"
              - name: ANALYSIS_URL
                value: "http://gpmt-net.default.svc.cluster.local"
              - name: APP_URL
                value: "http://localhost:5000"
              - name: ADMIN_URL
                value: "http://localhost:4000"
              - name: NODE_ENV
                value: "testing"
              - name: SPEECH_TOKEN
                value: "e1ba29dd157443d5a95f572562cbe2e0"
              - name: SPEECH_REGION
                value: "westeurope"
              ports:
              - containerPort: 80
