manifest/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gpmt-api-ingress
    namespace: "default"
    annotations:
        kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/ssl-redirect: "false"
        # nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
    defaultBackend:
      service:
        name: gpmt-api
        port:
          number: 80
    rules:
    - http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
                name: gpmt-api
                port:
                  number: 80
