manifest/test/services.yaml
apiVersion: v1
kind: Service
metadata:
    name: gpmt-api
    namespace: "default"
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: gpmt-api
---
apiVersion: v1
kind: Service
metadata:
    name: gpmt-mongodb
    namespace: "default"
spec:
    type: ClusterIP
    ports:
    - port: 27017
    selector:
        app: gpmt-mongodb
