manifest/test/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: gpmt-mongodb
spec:
    selector:
        matchLabels:
            app: gpmt-mongodb
    serviceName: "mongodb"
    template: 
        metadata:
            labels:
                app: gpmt-mongodb
        spec:
            containers:
            - name: gpmt-mongo
              image: mongo:latest
              ports:
              - containerPort: 27017
                name: mongodb
              volumeMounts:
              - name: "gpmt-mongodb-data"
                mountPath: /data/db
            volumes:
            - name: gpmt-mongodb-data
              persistentVolumeClaim:
                claimName: gpmt-mongodb-pvc
